# nbody-physics

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/nbody/: bodies.cpp
